<resources>
    <string name="app_name">Broadcastation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local">Bluetooth</string>
    <string name="http">Http</string>
    <string name="mqtt">Mqtt</string>
    <string name="local_title">Bluetooth</string>
    <string name="deviceId">Tên thiết bị</string>
    <string name="content">Nội dung phát</string>
    <string name="add_remote">Thêm điều khiển</string>

    <!-- Permission -->
    <string name="summary_permission">We kindly request permission for our Android application, [BLE_APP], to access necessary device features and permissions in order to provide an optimal user experience. </string>
    <string name="permission">Permission</string>
    <string name="grant">Grant</string>
    <string name="api">Error API</string>
    <string name="summary_api">The API is currently experiencing an error. Please check your connection or try requesting again</string>
    <string name="open_setting">Open Setting</string>
    <string name="request">Request</string>
    <string name="remote_name">Tên điều khiển <font color="#e53001">*</font></string>
    <string name="save">Lưu</string>
    <string name="key_value">Key value <font color="#e53001">*</font></string>
    <string name="domain_mqtt">Domain <font color="#e53001">*</font></string>
    <string name="http_url">Url <font color="#e53001">*</font></string>
    <string name="channel">Kênh <font color="#e53001">*</font></string>
    <string name="broadcast">Phát</string>
    <string name="remote_icon">Icon</string>
    <string name="remote_description">Mô tả</string>
    <string name="remote_category">Danh mục <font color="#e53001">*</font></string>
    <string name="remote_option">Phương thức phát <font color="#e53001">*</font></string>
    <string name="delete">Xóa</string>
    <string name="add_category">Nhập danh mục mới</string>
    <string name="mes_add_success">Thêm thành công</string>
    <string name="mes_update_success">Cập nhật thành công</string>
    <string name="update_title">Cập nhật điều khiển</string>
    <string name="add_category_title">Thêm danh mục</string>
    <string name="add_category_fail">Danh mục không được để trống</string>
    <string name="add_category_success">đã được thêm vào danh mục</string>
    <string name="filter">Lọc</string>
    <string name="quit_noti">Nhấn lần nữa để thoát</string>
    <string name="http_method">HTTP METHOD <font color="#e53001">*</font></string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="not_empty_input">Nhập tên điều khiển</string>
    <string name="port_mqtt">Port</string>
    <string name="ok">OK</string>
    <string name="new_notice">Chưa nhập tên điều khiển</string>
    <string name="empty_name">Tên điều khiển chưa hợp lệ, hãy nhập đầy đủ</string>
    <string name="empty_http_url">Đường dẫn chưa hợp lệ, hãy nhập đầy đủ</string>
    <string name="empty_mqtt_domain_channel">Domain hoặc kênh chưa hợp lệ, hãy nhập lại</string>
    <string name="get_http_message">Lấy dữ liệu thành công từ</string>
    <string name="post_http_notice">Phát dữ liệu thành công đến</string>
    <string name="get_http_notice">Lấy dữ liệu thành công từ</string>
    <string name="default1_home">Nhà riêng</string>
    <string name="default2_work">Cơ quan</string>
    <string name="default0_add">Thêm mới</string>
    <string name="delete_remote">Đã xóa điều khiển</string>
    <string name="undo">Hoàn tác</string>
    <string name="backToHome">Quay lại</string>
    <string name="def_return">Trở về mặc định</string>
    <string name="custom_noti">Đã chuyển qua dạng Custom</string>
    <string name="normal_noti">Đã chuyển qua dạng Normal</string>
    <string name="grid_noti">Đã chuyển qua dạng Grid</string>
    <string name="category_noti">Đã chuyển qua dạng Category</string>
    <string name="normal_filter">Normal</string>
    <string name="category_filter">Category</string>
    <string name="custom_filter">Custom</string>
    <string name="grid_filter">Grid</string>
    <string name="broadcast_filter">Broadcast</string>
    <string name="broadcast_noti">Đã chuyển qua dạng Broadcast</string>
    <string name="undo_delete">Cẩn thận lần sau nhé !</string>
    <string name="delete_confirm_title">Xóa điều khiển</string>
    <string name="delete_confirm_message">Bạn đã chắc chắn muốn xóa điều khiển này chưa ?</string>
    <string name="yes_confirm">Xác nhận</string>
    <string name="no_confirm">Từ chối</string>
    <string name="username_mqtt">Tên người dùng</string>
    <string name="password_mqtt">Mật khẩu</string>

    <string-array name="broadcast_type_menu">
        <item>Bluetooth</item>
        <item>Http</item>
        <item>Mqtt</item>
    </string-array>

    <string-array name="remote_category">
        <item>Thêm mới</item>
        <item>Trở về mặc định</item>
        <item>Nhà riêng</item>
        <item>Cơ quan</item>
    </string-array>
</resources>