<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_touch">

    <ImageView
        android:id="@+id/remote_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space"
        android:background="@drawable/bg_round_remote"
        android:contentDescription="@string/broadcast"
        android:padding="@dimen/space_larges"
        android:src="@drawable/ic_broadcast"
        android:foregroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/remote_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remote_description"
        android:padding="@dimen/space_tiny"
        android:src="@drawable/ic_broadcast_small"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintStart_toEndOf="@id/remote_broadcast"
        app:layout_constraintTop_toTopOf="@id/remote_broadcast"/>

    <TextView
        android:id="@+id/remote_name"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:maxLength="10"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remote_broadcast" />

    <TextView
        android:id="@+id/remote_describe"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:text="@string/add_category"
        android:paddingBottom="@dimen/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remote_name" />

</androidx.constraintlayout.widget.ConstraintLayout>